# doh-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  notes.md
.github/workflows/: docker.yml
benchmark/: cloudflare-radar-domains-top-100-20240623.csv  parse_domains.sh  wrk-script.lua
conf/: default.toml
src/: lib.rs  main.rs  settings.rs
src/cache/: mod.rs
src/dns/: buffer.rs  header.rs  mod.rs  query.rs  record.rs  result.rs
src/http/: dns.rs  mod.rs
src/tls/: mod.rs
tests/: doh_simple_tests.rs
