[package]
name = "https-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.7.5"
axum-extra = "0.9.3"
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22.1"
futures = "0.3.30"
indoc = "2.0.5"
rcgen = { version = "0.13.1", features = [  "pem", "x509-parser" ] }
ring = "0.17.8"
rustls-cert-gen = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
time-macros = "0.2.18"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
