[package]
name = "doh-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.7.5"
axum-extra = "0.9.3"
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22.1"
rcgen = { version = "0.13.1", features = [  "pem", "x509-parser" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14.0"
clap = { version = "4.5.4", features = ["derive"] }
serde_derive = "1.0.203"
